feat: update readme, configure mobile repo

--- a/mobile/app.json
+++ b/mobile/app.json
@@ -12,7 +12,8 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.paulocerez.mobile"
     },
     "android": {
       "adaptiveIcon": {
@@ -22,6 +23,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "eas": {
+        "projectId": "4e633f17-a45c-4431-b5ca-eaf3c47d394b"
+      }
     }
   }
 }
