--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,7 +15,8 @@
     "react-native": "0.74.1",
     "react-dom": "18.2.0",
     "react-native-web": "~0.19.10",
-    "@expo/metro-runtime": "~3.2.1"
+    "@expo/metro-runtime": "~3.2.1",
+    "expo-dev-client": "~4.0.14"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
